src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>FinServ__Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Presentation</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Develop Proposal</fullName>
        </values>
        <values>
            <fullName>Initiate Transfer</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Wallet Share</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Presentation</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Develop Proposal</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Initiate Transfer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Opportunities</relationshipLabel>
        <relationshipName>HouseholdOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>OpportunityContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <businessProcess>FinServ__Opportunity Process</businessProcess>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__RetirementPlanning</fullName>
        <active>true</active>
        <businessProcess>FinServ__Wallet Share</businessProcess>
        <label>Retirement Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__WalletShareOpportunity</fullName>
        <active>true</active>
        <businessProcess>FinServ__Wallet Share</businessProcess>
        <label>Opportunity (Wallet Share)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
        NOT(ISBLANK( FinServ__ReferredByUser__c )), 
        NOT(ISBLANK( FinServ__ReferredByContact__c )) 
    )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
</CustomObject>